2009-06-21  Helmut Eller  <heller@common-lisp.net>

	Don't try so hard to get symbol-at-point right.
	The old implementation was complicated and didn't even pass it's
	own test suite.  The new version is less ambitious but simpler.

	* slime.el (slime-symbol-at-point, slime-beginning-of-symbol)
	(slime-end-of-symbol): Simplify.
	(slime-exit-vertical-bars, slime-symbol-constituent-at): Deleted.
	([test] symbol-at-point.1 .. symbol-at-point.14): Renamed form
	fancy-symbol-names and split up into smaller peices.
	(slime-test-symbols): New.
	(slime-check-symbol-at-point): Renamed from
	slime-check-fancy-symbol-name.

2009-06-21  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (frame-source-location): Renamed from
	frame-source-location-for-emacs.

2009-06-20  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-check-fancy-symbol-name): Don't update the loop
	index inside the loop body.

2009-06-20  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (emacs-connected): Deleted. Setting
	ccl::*interactive-abort-process* doesn't seem right.

2009-06-15  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp: Explicitly require CCL version 1.3.

2009-06-15  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (emacs-inspect [t]): Honor the type returned
	by inspector::line-n.
	(emacs-inspect [compiled-lexical-closure]): Deleted. Let CCL's
	inpector handle this case. Which does it better and it's less work
	for us.

2009-06-14  Helmut Eller  <heller@common-lisp.net>

	Some workarounds for SBCL on Windows.

	* swank-sbcl.lisp (input-available-p): New function.
	(wait-for-input): Use it.
	([win32] handle-listen, has-buffered-input-p): New.
	(temp-file-name, tempnam): Plain tmpnam(3) is next to useless on
	Windows use tempnam(3) instead.

2009-06-12  Geo Carncross  <geocar@gmail.com>

	* swank-ecl.lisp: Support new environment changes in recent ECL/CVS
	patch largely from ECL maintainer.
